# mobilenet-plugin

./: .gitignore  138.css  138.css.map  138.js  138.js.map  199.js  199.js.map  264.js  264.js.map  315.js  315.js.map  594.js  594.js.map  602.js  602.js.map  895.css  895.css.map  895.js  895.js.map  Cargo.toml  README.md  example.ipynb  index.html  main.css  main.css.map  main.js  main.js.map  package-lock.json  package.json  remoteEntry.js  remoteEntry.js.map  webpack.config.js
src/: Widget.vue  index.js  lib.rs  test.py
