[package]
name = "mobilenet-plugin"
authors = ["Christian <chriamue@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Plugin to classify images."
license = "MIT"
repository = "https://github.com/lenna-project/mobilenet-plugin"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bytes = "1.1"
image = {version = "0.23"}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
lenna_core = {git = "https://github.com/lenna-project/lenna-core", branch="main" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tract-onnx = "0.15.8"
