[package]
name = "mobilenet-plugin"
authors = ["Christian <chriamue@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Plugin to classify images."
license = "MIT"
repository = "https://github.com/lenna-project/mobilenet-plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
image = { version = "0.23", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.22", default-features = false }
lenna_core = { git = "https://github.com/lenna-project/lenna-core", branch = "main" }
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tract-onnx = "0.15.8"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.23" }
js-sys = "0.3.50"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
